# OSS_BPP_verified

./: CMakeLists.txt  README.md
include/: bpp_path_utils.hpp  common_types.hpp  data_manager.hpp  parameters.hpp  path_utils.hpp  planner_manager.hpp  resample.hpp  route_handler.hpp  static_drivable_area.hpp  trajectory.hpp  utils.hpp
reference_IO/scenario_1/: frame_diagnostics.txt  localization__kinematic_state.jsonl  perception__object_recognition__objects.jsonl  planning__mission_planning__route.jsonl
reference_IO/scenario_2/: frame_diagnostics.txt  localization__kinematic_state.jsonl  perception__object_recognition__objects.jsonl  planning__mission_planning__route.jsonl  planning__scenario_planning__lane_driving__behavior_planning__path_with_lane_id.jsonl
reference_IO/scenario_3/: frame_diagnostics.txt  localization__kinematic_state.jsonl  perception__object_recognition__objects.jsonl  planning__mission_planning__route.jsonl
src/: bpp_path_utils.cpp  main.cpp  path_utils.cpp  planner_manager.cpp  resample.cpp  route_handler.cpp  static_drivable_area.cpp  trajectory.cpp  utils.cpp
tools/: compare_bpp_output.py
